--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ body{
     font-family: tt-regular;
     letter-spacing: 0.28px;
 }
-.carousel-indicators{
+#mainSLider .carousel-indicators{
     position: absolute;
     right: -25%;
     bottom: 0;
@@ -98,7 +98,7 @@ body{
     list-style: none;
     flex-direction: column;
 }
-.carousel-indicators li{
+#mainSLider .carousel-indicators li{
     font-family: 'Teko', sans-serif;
     text-indent: 0;
       margin: 0 2px;
@@ -116,7 +116,7 @@ body{
       padding-left: 10px;
       margin: 5px 0;
 }
-.carousel-indicators li.active{
+#mainSLider .carousel-indicators li.active{
      font-size: 2.5rem;
       font-weight: 600;
       border-bottom: 1px solid #111;
@@ -382,4 +382,101 @@ footer form button.btn-theme:hover{
     font-family: 'teko-semibold';
     font-size: 2.5rem;
     line-height: 2.5rem;
+}
+.ourTeam{
+    padding: 3rem 0;
+}
+.ourTeam .sideText{
+    top: 20vh;
+    letter-spacing: 4.62px;
+    color: #E44200;
+    text-transform: uppercase;
+    opacity: 1;
+    font-size: 8rem;
+    font-weight: 600;
+    left: -10rem;
+}
+#teamSlider .carousel{
+    height: 50vh;
+}
+#teamSlider .carousel-caption{
+    position: absolute;
+    right: 15%;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: #fff;
+    text-align: center;
+    background: #EDF0F2;
+    color: #000;
+    width: 40%;
+    font-size: 12px;
+    line-height: 18px;
+    text-align: left;
+    padding: 2rem 1.5rem;
+}
+#teamSlider .carousel-control-prev, #teamSlider .carousel-control-next{
+    background: #333;
+    right: 0;
+    left: auto;
+    top: auto;
+    width: 42px;
+    height: 42px;
+    opacity: 1;
+    color: #111;
+}
+#teamSlider .carousel-control-prev{
+    bottom: 43px;
+}
+#teamSlider .carousel-control-next{
+    bottom: 0;
+}
+#teamSlider .carousel-control-prev:hover, #teamSlider .carousel-control-next:hover{
+    background: #E44200;
+}
+.coreValueCard{
+    background: #E44200;
+    height: 20rem;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    display: flex;
+    align-items: flex-end;
+    padding: 1rem;
+}
+.ourCoreValues{
+    padding:3rem 0;
+}
+.coreValueCard h3{
+    text-align: left;
+    font-size: 1.4rem;
+    letter-spacing: 0px;
+    color: #EDF0F2;
+    opacity: 1;
+    font-family: teko-regular;
+}
+.themeHead{
+    font-family: teko-semibold;
+    font-size: 2.25rem;
+    text-transform: uppercase;
+}
+.clientsLogo {
+    display: flex;
+    flex-wrap: wrap;
+}
+.clientsLogo img{
+    width: 20%;
+    object-fit: contain;
+    height: 100px;
+}
+.sideText.clientSays{
+    top: 28vh;
+    letter-spacing: 0px;
+    color: #E44200;
+    text-transform: uppercase;
+    opacity: 1;
+    font-size: 3.8rem;
+    font-weight: 600;
+    left: -9rem;
 }
