--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ body{
     /* background-color: #EDF0F2; */
 }
 .navbar-light.bg-light{
-    /* background-color: #EDF0F2 !important; */
+    background-color: #fff !important;
 }
 .navbar-brand img{
     height: 5rem;
@@ -71,8 +71,8 @@ body{
     font-family: 'Teko', sans-serif;
     color: #E44200;
     text-transform: uppercase;
-    font-size: 68px;
-    line-height: 50px;
+    font-size: 3.5rem;
+    line-height: 2.5rem;
     font-weight: 700;
 }
 .mainLeft p{
@@ -194,7 +194,7 @@ body{
     text-transform: capitalize;
     opacity: 1;
 }
-.f-workDetails a, .coreValues a{
+.f-workDetails a, .coreValues a, .mainLeft .btnFind{
     display: flex;
     align-items: center;
     color: #000;
@@ -202,10 +202,10 @@ body{
     text-transform: uppercase;
     font-size: 0.85rem;
 }
-.f-workDetails a:hover, .coreValues a:hover{
+.f-workDetails a:hover, .coreValues a:hover, .mainLeft .btnFind:hover{
     text-decoration: none;
 }
-.f-workDetails a i, .coreValues a i{
+.f-workDetails a i, .coreValues a i, .mainLeft .btnFind i{
     color: #E44200;
     font-size: 2rem;
     font-weight: 600;
@@ -240,8 +240,8 @@ body{
 }
 .coreValues ul li{
     font-family: teko-bold;
-    font-size: 2.25rem;
-    line-height: 40px;
+    font-size: 2rem;
+    line-height: 42px;
     letter-spacing: 0px;
 }
 .coreValues h4{
@@ -348,6 +348,8 @@ footer form button.btn-theme:hover{
 }
 .projects .coreValues h4{
     padding-top: 0;
+    position: relative;
+    margin-left: -30px;
 }
 .projects .coreValues span{
     font-family: teko-semibold;
@@ -382,6 +384,8 @@ footer form button.btn-theme:hover{
     font-family: 'teko-semibold';
     font-size: 2.5rem;
     line-height: 2.5rem;
+    position: relative;
+    margin-top: -40px;
 }
 .ourTeam{
     padding: 3rem 0;
@@ -395,6 +399,13 @@ footer form button.btn-theme:hover{
     font-size: 8rem;
     font-weight: 600;
     left: -10rem;
+}
+.themeCount{
+    font-family: teko-semibold !important;
+    font-size: 2.25rem;
+    position: relative;
+    
+    margin-left: -40px;
 }
 #teamSlider .carousel{
     height: 50vh;
@@ -437,7 +448,7 @@ footer form button.btn-theme:hover{
     background: #E44200;
 }
 .coreValueCard{
-    background: #E44200;
+    background: #2A272D;
     height: 20rem;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -479,4 +490,7 @@ footer form button.btn-theme:hover{
     font-size: 3.8rem;
     font-weight: 600;
     left: -9rem;
+}
+.carousel.whyDasCarousel{
+    height: 80vh;
 }
